* Switched to Java 11 * Removed Lombok & Guava * WIP DSFToolInterface with automatic download