@@ -1,9 +1,7 @@
 package de.melb00m.tr4o.proc;
 
-import com.google.common.base.Preconditions;
-import com.google.common.collect.ImmutableSet;
 import de.melb00m.tr4o.util.FileUtils;
-import lombok.val;
+import org.apache.commons.lang3.Validate;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
@@ -11,8 +9,10 @@ import java.io.IOException;
 import java.lang.reflect.UndeclaredThrowableException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.Collection;
+import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 public class LibraryGenerator {
@@ -20,15 +20,14 @@ public class LibraryGenerator {
   private static final Logger LOG = LogManager.getLogger(LibraryGenerator.class);
   private static final String LIBRARY_TXT = "library.txt";
   private static final String EXPORT_DIRECTIVE = "EXPORT_EXCLUDE %s/%s %s";
-  private static final String[] LIB_TXT_HEADERS = {"A", "800", "LIBRARY", ""};
-  private static final ImmutableSet<String> LIB_COPY_EXCLUSIONS =
-      ImmutableSet.of("library.lib", LIBRARY_TXT);
+  private static final List<String> LIB_TXT_HEADERS = List.of("A", "800", "LIBRARY", "");
+  private static final Set<String> LIB_COPY_EXCLUSIONS = Set.of("library.lib", LIBRARY_TXT);
 
   private final String libraryPrefix;
   private final Path libraryFolder;
   private final Path libraryResourcesFolder;
   private final Path xPlaneSourceLibraryFolder;
-  private final ImmutableSet<String> exportedFiles;
+  private final Set<String> exportedFiles;
 
   public LibraryGenerator(
       String libraryPrefix,
@@ -40,7 +39,7 @@ public class LibraryGenerator {
     this.libraryFolder = libraryFolder;
     this.libraryResourcesFolder = libraryResourcesFolder;
     this.xPlaneSourceLibraryFolder = resourcesSourceFolder;
-    this.exportedFiles = ImmutableSet.copyOf(exportedFiles);
+    this.exportedFiles = Set.copyOf(exportedFiles);
   }
 
   public void validateOrCreateLibrary() {
@@ -48,12 +47,10 @@ public class LibraryGenerator {
       try {
         if (Files.exists(libraryFolder)) {
           validateExistingLibrary();
-          return;
+        } else {
+          copyLibraryFolder();
+          generateLibraryTxt();
         }
-
-        copyLibraryFolder();
-        generateLibraryTxt();
-
       } catch (IOException e) {
         throw new UndeclaredThrowableException(e);
       }
@@ -61,29 +58,32 @@ public class LibraryGenerator {
   }
 
   private void generateLibraryTxt() throws IOException {
-    val libraryTxt = libraryFolder.resolve(LIBRARY_TXT);
+    var libraryTxt = libraryFolder.resolve(LIBRARY_TXT);
     LOG.info("Generating library at {}", libraryTxt);
-    Preconditions.checkState(
+    Validate.isTrue(
         Files.notExists(libraryTxt),
-        "Can't create library.txt at %s: It already exists",
+        "Can't create new library.txt at %s: It already exists",
         libraryTxt);
 
     // find our exported files in the folder
-    val filesToExport = FileUtils.searchFileNamesRecursively(libraryResourcesFolder, exportedFiles);
+    final var filesToExport =
+        FileUtils.searchFileNamesRecursively(libraryResourcesFolder, exportedFiles);
     exportedFiles.forEach(
         export -> {
-          Preconditions.checkState(
+          Validate.isTrue(
               filesToExport.containsKey(export),
-              "No '%s' found in copied library for export in library.txt",
-              export);
-          Preconditions.checkState(
+              "No file named '%s' for export in library.txt found in library: {}",
+              export,
+              libraryResourcesFolder);
+          Validate.isTrue(
               filesToExport.get(export).size() == 1,
-              "More than one '%s' found in copied library",
-              export);
+              "More than one file named '%s' found in copied library: {}",
+              export,
+              libraryResourcesFolder);
         });
 
     // Generate the library.txt content-lines
-    val libLines = Arrays.stream(LIB_TXT_HEADERS).collect(Collectors.toList());
+    final var libLines = new ArrayList<>(LIB_TXT_HEADERS);
     filesToExport.entries().stream()
         .map(entry -> buildExportDirective(entry.getKey(), entry.getValue()))
         .forEach(libLines::add);
@@ -93,13 +93,13 @@ public class LibraryGenerator {
 
   private void copyLibraryFolder() throws IOException {
     LOG.info("Copying X-Plane default roads-library to {}", libraryFolder);
-    val exclusions =
+    final var exclusions =
         LIB_COPY_EXCLUSIONS.stream()
             .map(xPlaneSourceLibraryFolder::resolve)
-            .collect(Collectors.toList());
-    Preconditions.checkState(
+            .collect(Collectors.toSet());
+    Validate.isTrue(
         Files.exists(xPlaneSourceLibraryFolder),
-        "Can't find X-Plane default roads-library at expected {}",
+        "Can't find X-Plane default roads-library at expected location: {}",
         xPlaneSourceLibraryFolder);
     Files.createDirectories(libraryResourcesFolder);
     FileUtils.copyRecursively(
@@ -108,25 +108,25 @@ public class LibraryGenerator {
 
   private void validateExistingLibrary() throws IOException {
     LOG.info("Verifying that the existing library at {} can be used...", libraryFolder);
-    val libraryFile = libraryFolder.resolve(LIBRARY_TXT);
-    Preconditions.checkState(
+    final var libraryFile = libraryFolder.resolve(LIBRARY_TXT);
+    Validate.isTrue(
         Files.isReadable(libraryFile),
-        "Can't read the 'library.txt' file in the existing library at {}",
+        "Can't read the 'library.txt' file in the existing library: {}",
         libraryFile);
-    val containedLines = Files.readAllLines(libraryFile);
+    final var containedLines = Files.readAllLines(libraryFile);
     exportedFiles.forEach(
         exp -> {
-          val expSearch = String.format(EXPORT_DIRECTIVE, libraryPrefix, exp, "");
-          Preconditions.checkState(
+          final var expSearch = String.format(EXPORT_DIRECTIVE, libraryPrefix, exp, "");
+          Validate.isTrue(
               containedLines.stream().anyMatch(line -> line.startsWith(expSearch)),
-              "Could not find expected export '{}' in existing library {}",
+              "Could not find expected export '{}' in existing library: {}",
               expSearch,
               libraryFile);
         });
   }
 
   private String buildExportDirective(final String exportName, final Path fileLocation) {
-    val relativePath = libraryFolder.relativize(fileLocation).toString().replace('\\', '/');
+    final var relativePath = libraryFolder.relativize(fileLocation).toString().replace('\\', '/');
     return String.format(EXPORT_DIRECTIVE, libraryPrefix, exportName, relativePath);
   }
 }
